--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,21 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-04-04 Tue 22:25]
+#+CAPTION: Clock summary at [2017-04-08 Sat 08:27]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:48* |      |      | 100.0 |
+| *Total time*                                                                | *3:40* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:48   |      |      | 100.0 |
-| Active                                                                      |        | 1:48 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:59 |  54.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |  45.4 |
+| Stories                                                                     | 3:40   |      |      | 100.0 |
+| Active                                                                      |        | 3:40 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 2:51 |  77.7 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |  22.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
     CLOCK: [2017-04-04 Tue 22:26]--[2017-04-04 Tue 23:33] =>  1:07
+    CLOCK: [2017-04-06 Thu 20:12]--[2017-04-06 Thu 20:57] =>  0:45
     CLOCK: [2017-04-04 Tue 18:35]--[2017-04-04 Tue 19:26] =>  0:51
     CLOCK: [2017-04-03 Mon 10:21]--[2017-04-03 Mon 10:29] =>  0:08
 
@@ -97,6 +98,25 @@ As part of the [[https://github.com/DomainDrivenConsulting/zango][zango]] projec
 Dogen and ODB. It is largely based on the database model, minus the
 basic types we had added a while ago. We should just drop the database
 model and adopt the northwind model from zango.
+
+*** CANCELLED Windows package has element mappings                    :story:
+    CLOSED: [2017-04-06 Thu 20:26]
+
+*Rationale*: seems like a random installation problem.
+
+For some reason even after renaming the mappings file it is still on
+windows. This could also be a bug of the installer; after a uninstall
+and reinstall the problem went away. Double check with a clean
+install.
+
+*** CANCELLED Comments in C# appear to be the attribute name          :story:
+    CLOSED: [2017-04-06 Thu 20:28]
+
+*Rationale*: checked Zeta model and CSharp model, both look fine.
+
+It seems we are copying across the attribute name rather than a
+comment. This could also be a problem with the input. Check the Zeta
+model.
 
 *** Add support for proper JSON serialisation in C++                  :story:
 
