--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,16 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-04-08 Sat 08:27]
+#+CAPTION: Clock summary at [2017-04-12 Wed 23:14]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:40* |      |      | 100.0 |
+| *Total time*                                                                | *5:58* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:40   |      |      | 100.0 |
-| Active                                                                      |        | 3:40 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 2:51 |  77.7 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |  22.3 |
+| Stories                                                                     | 5:58   |      |      | 100.0 |
+| Active                                                                      |        | 5:58 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 2:51 |  47.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |  13.7 |
+| STARTED Add support for proper JSON serialisation in C++                    |        |      | 2:18 |  38.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -118,7 +119,8 @@ It seems we are copying across the attribute name rather than a
 comment. This could also be a problem with the input. Check the Zeta
 model.
 
-*** Add support for proper JSON serialisation in C++                  :story:
+*** STARTED Add support for proper JSON serialisation in C++          :story:
+    CLOCK: [2017-04-12 Wed 20:56]--[2017-04-12 Wed 23:14] =>  2:18
 
 We need to add support for JSON in C++. It will eventually have to
 roundtrip to JSON in C# but that will be handled as two separate
@@ -145,6 +147,41 @@ stereotype for a profile such as =Serializable= it can choose which
 serialisation codecs to enable for which language. This means that the
 same stereotypes can have different meanings in different
 architectures, which is the desired behaviour.
+
+We should create a serialise / deserialise functions following the
+same logic as boost:
+
+#+begin_src c++
+void serialize(Value& v, const object& o);
+void serialize(Value& v, const base& b);
+
+void deserialize(const Value& v, object& o);
+base* deserialize(const Value& v);
+#+end_src
+
+Or perhaps even better, we can make the above the internal methods and
+use =operator<<= and =operator>>= as the external methods:
+
+#+begin_src c++
+void operator<<(Value& v, const object& o);
+void operator>>(const Value& v, object& o);
+#+end_src
+
+Notes:
+
+- create a registrar with a map for each base type. The function
+  returns a base type pointer.
+- when you deserialize a base type pointer, you call the pointer
+  deserialize above. Same for when you have a pointer to an object. It
+  will internally call the registrar (if its a base type) and get the
+  right function.
+- this means we only need to look at type for inheritance. Although we
+  should probably always do it for validation? However, what happens
+  if we want to make a model so we can read external JSON? It won't
+  contain type markings.
+- =operator>>= will not be defined for pointers or base classes.
+- this wont work for the case of =doc << base=. For this we need a map
+  that looks up on type_index.
 
 Merged stories:
 
@@ -701,5 +738,8 @@ Another common use case is to serialise from and to string. It would
 be nice to have helpers for strings too.
 
 These APIs can then be reused by the caching layer.
+
+We could have a stereotype that marks a class as requiring this kind
+of serialisation, such as "serialisation entry point".
 
 ** Deprecated
