--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,21 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-04-12 Wed 23:14]
+#+CAPTION: Clock summary at [2017-04-14 Fri 13:06]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:58* |      |      | 100.0 |
+| *Total time*                                                                | *8:24* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:58   |      |      | 100.0 |
-| Active                                                                      |        | 5:58 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 2:51 |  47.8 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |  13.7 |
-| STARTED Add support for proper JSON serialisation in C++                    |        |      | 2:18 |  38.5 |
+| Stories                                                                     | 8:24   |      |      | 100.0 |
+| Active                                                                      |        | 8:24 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 5:17 |  62.9 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:49 |   9.7 |
+| STARTED Add support for proper JSON serialisation in C++                    |        |      | 2:18 |  27.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-04-14 Fri 11:31]--[2017-04-14 Fri 13:05] =>  1:34
     CLOCK: [2017-04-13 Thu 06:29]--[2017-04-13 Thu 07:21] =>  0:52
     CLOCK: [2017-04-04 Tue 22:26]--[2017-04-04 Tue 23:33] =>  1:07
     CLOCK: [2017-04-06 Thu 20:12]--[2017-04-06 Thu 20:57] =>  0:45
@@ -201,6 +202,107 @@ If we do implement customisable JSON serialisation, we should still
 use the raw format in streaming. We need a way to disable the cooked
 JSON internally. We should also re-implement streaming in terms of
 this JSON mode.
+
+*** Make creating new facets easier                                   :story:
+
+For types that are stitchable such as formatters, we need to always
+copy and paste the template form another formatter and then update
+values. It would be great if we could have dogen generate a bare-bones
+stitch template. This is pretty crazy so it requires a bit of
+concentration to understand what we're doing here:
+
+- detect that the =yarn::object= is annotated as
+  =quilt.cpp.types.class_implementation.formatting_style= =stitch=.
+- find the corresponding expected stitch file. If none is available,
+  /dynamically/ change the =formatting_style= to =stock= and locate a
+  well-known stitch formatter.
+- the stitch formatter uses a stitch template that generates stitch
+  templates. Since we cannot escape stitch markup, we will have to use
+  the assistant. One problem we have is that the formatter does not
+  state all of the required information such as what yarn types does
+  it format and so forth. We probably need a meta-model concept to
+  capture the idea of formatters - and this could be in yarn - and
+  make sure it has all of this information. This also has the
+  advantage of making traits, initialisers etc easier. We can do the
+  same for helpers too.
+- an additional wrinkle is that we need different templates for
+  different languages. However, perhaps these are just wale templates
+  in disguise rather than stitch templates? Then we can have the
+  associated default wale templates, very much in the same way we have
+  wale templates for the header files. They just happen to have stitch
+  markup rather than say C++ code.
+
+This is a radically different way from looking at the code. We are now
+saying that yarn should have concepts for:
+
+- facets: specialisation of modules with meta-data such as facet name
+  etc. This can be done via composition to make our life easier.
+- formatters and helpers: elements which belong to a facet and know of
+  their archetype, wale templates, associated yarn element and so
+  forth.
+
+We then create stereotypes for these just like we did for
+=enumeration=. As part of the yarn parsing we instantiate these
+meta-objects with all of their required information. In addition, we
+need to create what we are calling at present "profiles" to define
+their enablement and to default some of its meta-data.
+
+When time comes for code-generation, these new meta-types behave in a
+more interesting way:
+
+- if there is no stitch template, we use wale to generate it.
+- once we have a stitch template, we use stitch to generate the c++
+  code. From then on, we do not touch the stitch template. This
+  happens because overwrite is set to false on the enablement
+  "profile".
+
+Merged stories:
+
+*Code generate initialisers and traits*
+
+If we could mark the modules containing facets with a stereotype
+somehow - say =facet= for example, we could automatically inject two
+meta-types:
+
+- =initialzer=: for each type marked as =requires_initialisation=,
+  register the formatter. Register the types as a formatter or as a
+  helper.
+- =traits=: for each formatter in this module (e.g. classes with the
+  stereotype of =C++ Artefact Formatter= or =C# Artefact Formatter=),
+  ask for their archetype. The formatters would have a meta-data
+  parameter to set their archetype. In fact we probably should have a
+  separate meta-data parameter (archetype source? archetype?).
+
+We may need to solve the stereotype registration problem though, since
+only C++ would know of this facet. Or we could hard-code it in yarn
+for now.
+
+Motes:
+
+- how does the initialiser know the formatter is a =quilt.cpp=
+  formatter rather than say a C# formatter? this could be done via the
+  formatter's archetype - its the kernel.
+- users can make use of this very same mechanism to generate their own
+  formatters. We can then load up the DLL with boost plugin. Note that
+  users are not constrained by the yarn meta-model. That is to say,
+  they can create new meta-types using the fabric approach as we do in
+  =quilt.cpp=. Their DLL then defines the formatters which are able to
+  process those meta-types. The only snag in all of this is the
+  expansion machinery. We use static visitors all over the place, and
+  without somehow dynamically knowing about the new types, they will
+  not get expanded. We need to revisit expansion in this light to see
+  if there is a way to make it more dynamic somehow, or at least have
+  a "default" behaviour for all unknown types where we do the generic
+  things to them such as computing the file path, etc. This is
+  probably sufficient for the vast majority of use cases. The other
+  wrinkle is also locator. We are hard-coding paths. If the users
+  limit themselves to creating "regular" entities rather than say
+  CMakeLists/msbuild like entities which have some special way to
+  compute their names, then we don't have a problem. But there should
+  be a generic way to obtain all path elements apart from the file
+  name from locator. And also perhaps have facets that do not have a
+  facet directory so that we can place types above the facet
+  directories such as SLNs, CMakeLists, etc.
 
 *** Add column name support to ORM                                    :story:
 
