--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -6536,6 +6536,16 @@ symmetric for both use cases.
 Stuff that is not directly related to the problem domain but its
 needed by Dogen.
 
+
+*** Build static and dynamic libraries                                :story:
+
+At present we are always building static libraries from
+Dogen. However, CMake supports both.
+
+Links:
+
+- [[http://stackoverflow.com/questions/2152077/is-it-possible-to-get-cmake-to-build-both-a-static-and-shared-version-of-the-sam][Is it possible to get CMake to build both a static and shared version of the same library?]]
+
 *** Add proper DEB support to bintray                                 :story:
 
 At present we are uploading our Debian package to a "generic" area in
@@ -7288,6 +7298,7 @@ provides a convenient interface for writing new checks.
 See also:
 
 - [[https://github.com/polysquare/clang-tidy-target-cmake][clang-tidy-target-cmake]]
+- [[https://www.kdab.com/clang-tidy-part-1-modernize-source-code-using-c11c14/?utm_source%3DMaster%2520List%252006-16&utm_campaign%3Dd11fea20e3-EMAIL_CAMPAIGN_2017_03_23&utm_medium%3Demail&utm_term%3D0_bdde4cdc11-d11fea20e3-101553725&goal%3D0_bdde4cdc11-d11fea20e3-101553725][Clang-Tidy, part 1: Modernize your source code using C++11/C++14]]
 
 *** Add support for the =scan-build= static analyser                  :story:
 
