--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-04-26 Wed 21:53]
+#+CAPTION: Clock summary at [2017-04-26 Wed 22:31]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:09* |       |      | 100.0 |
+| *Total time*                                                                | *12:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:09   |       |      | 100.0 |
-| Active                                                                      |         | 12:09 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 5:17 |  43.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:49 |   6.7 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       | 2:18 |  18.9 |
-| STARTED Create a simple Emacs mode for stitch                               |         |       | 3:45 |  30.9 |
+| Stories                                                                     | 12:49   |       |      | 100.0 |
+| Active                                                                      |         | 12:49 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 5:17 |  41.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:49 |   6.4 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       | 2:18 |  17.9 |
+| STARTED Create a simple Emacs mode for stitch                               |         |       | 4:25 |  34.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -205,6 +205,7 @@ JSON internally. We should also re-implement streaming in terms of
 this JSON mode.
 
 *** STARTED Create a simple Emacs mode for stitch                     :story:
+    CLOCK: [2017-04-26 Wed 21:51]--[2017-04-26 Wed 22:31] =>  0:40
     CLOCK: [2017-04-26 Wed 18:05]--[2017-04-26 Wed 21:50] =>  3:45
 
 Create a really simple emacs mode that just has different visual
