--- a/doc/manual/manual.bib
+++ b/doc/manual/manual.bib
@@ -1,15 +1,41 @@
-@book{evans2004domain,
-  title={Domain-driven design: tackling complexity in the heart of software},
-  author={Evans, Eric},
-  year={2004},
-  publisher={Addison-Wesley Professional}
+@book{evans2004domaindriven,
+  author = {Evans, Eric},
+  isbn = {0321125215 9780321125217},
+  publisher = {Addison-Wesley},
+  title = {Domain-driven design : tackling complexity in the heart of software},
+  year = 2004
 },
 
-@book{2004model,
-  title={Model Driven Software Development},
-  author={},
-  year={},
-  publisher={Addison-Wesley Professional}
-}
+@book{Stahl:2006:MSD:1196766,
+ author = {Stahl, Thomas and Voelter, Markus and Czarnecki, Krzysztof},
+ title = {Model-Driven Software Development: Technology, Engineering, Management},
+ year = {2006},
+ isbn = {0470025700},
+ publisher = {John Wiley \& Sons},
+},
 
+@book{Steinberg:2009:EEM:1197540,
+ author = {Steinberg, David and Budinsky, Frank and Paternostro, Marcelo and Merks, Ed},
+ title = {EMF: Eclipse Modeling Framework 2.0},
+ year = {2009},
+ isbn = {0321331885},
+ edition = {2nd},
+ publisher = {Addison-Wesley Professional},
+},
 
+@book{Brooks:1995:MM:207583,
+ author = {Brooks,Jr., Frederick P.},
+ title = {The Mythical Man-month (Anniversary Ed.)},
+ year = {1995},
+ isbn = {0-201-83595-9},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+},
+
+@misc{Raymond:2015,
+ author = {Eric Steven Raymond},
+ title = {How To Become A Hacker},
+ year = {2015},
+ howpublished = {\url{http://www.catb.org/esr/faqs/hacker-howto.html}},
+ note = {Accessed: 2017-05-13}
+} 
