--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,19 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-05-26 Fri 15:11]
+#+CAPTION: Clock summary at [2017-05-26 Fri 15:31]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *24:47* |       |       | 100.0 |
+| *Total time*                                                                | *25:06* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 24:47   |       |       | 100.0 |
-| Active                                                                      |         | 24:47 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:26 |  26.0 |
+| Stories                                                                     | 25:06   |       |       | 100.0 |
+| Active                                                                      |         | 25:06 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:36 |  26.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   3.3 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  17.8 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   9.3 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  43.6 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  17.6 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   9.2 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  43.1 |
+| STARTED WIX Path has changed on appveyor                                    |         |       |  0:09 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -267,6 +268,39 @@ the work we were carrying out. However, as we reached v1.0, the theory
 took center stage. We cannot proceed to the next phase of the product
 without a firm grasp of the theory. This story is a starting point so
 we can decide on how to break up the work.
+
+*** STARTED WIX Path has changed on appveyor                          :story:
+    CLOCK: [2017-05-26 Fri 15:22]--[2017-05-26 Fri 15:31] =>  0:09
+
+At present we have hard-coded the path to WIX:
+
+#+begin_example
+  - ps: if ($build_type -eq "Release") {
+            cd $project_dir\build\output\$env:compiler\$build_type;
+            $env:Path += ";C:\Program Files (x86)\WiX Toolset v3.10\bin";
+            $env:WIX = "C:\Program Files (x86)\WiX Toolset v3.10\bin";
+            cpack -G WIX -C Release;
+        }
+#+end_example
+
+This means that every time WIX has a minor upgrade, our scripts break:
+
+#+begin_example
+CPack: Create package
+cpack : CMake Error at C:/Program Files (x86)/CMake/share/cmake-3.4/Modules/CPackWIX.cmake:261 (message):
+At line:1 char:211
++ ... rogram Files (x86)\WiX Toolset v3.10\bin"; cpack -G WIX -C Release; }
++                                                ~~~~~~~~~~~~~~~~~~~~~~~
+    + CategoryInfo          : NotSpecified: (CMake Error at ...:261 (message)::String) [], RemoteException
+    + FullyQualifiedErrorId : NativeCommandError
+
+  Could not find the WiX candle executable.
+CPack Error: Error while executing CPackWIX.cmake
+#+end_example
+
+The right way to do this is to use the WIX environment variable:
+
+- [[https://github.com/appveyor/ci/issues/1267][Add WiX toolset to PATH]]
 
 *** Move element segmentation into yarn                               :story:
 
